assets/styles/partials/components/_navbar.scss
.navbar.navbar-default {
	border-radius: 0;
	border: 0;
	margin: 0;
	position: absolute;
	width: 100%;
	top: 0;
	left: 0;
	z-index: 99;
	height: 60px;
	.navbar-brand {
		height: 60px;
		font-size: 1.75rem;
		text-transform: uppercase;
		padding: 1rem;
		display: inline-block;
		position: relative;
		max-width: 500px;
		img {
			height: 100%;
			display: inline-block;
			float: left;
		}
		span {
			float: left;
			padding: 0.5rem 0;
			font-family: $font-regular;
			text-transform: none;
			padding-left: 8px;
		}
	}
	.user-img-container {
		position: relative;
		padding-right: 15px;
		.user-img {
			border: 0;
			background: transparent;
			padding: 8px 0px 8px 16px;
			right: 0;
			top: 6px;
			position: absolute;
			width: 48px;
			max-height: 60px;
			overflow: hidden;
			.img-container {
				display: inline-block;
				position: relative;
				img {
					border-radius: 50%;
				}
				.close {
					display: none;
					position: absolute;
					left: 0;
					top: 0;
					width: 100%;
					height: 100%;
					line-height: 46px;
					border-radius: 50%;
				}
			}
			&:hover {
				.close {
					background: rgba($danger-color, 0.9);
					display: inline-block;
					color: #000;
				}
			}
		}
		@media screen and (max-width: 960px) and (min-width: 768px) {
			padding-right: 20px;
			span {
				display: none;
			}
		}
	}
	li {
		height: 60px;
		a, .extra-link {
			font-size: 1rem;
			text-transform: uppercase;
			padding: 1.5rem 1rem;
			&:hover,
			&:focus {
				outline: none;
			}
			.icon-container {
				display: inline-block;
				max-width: 0.9rem;
				margin-right: 5px;
			}
		}
		.apps-dropdown-toggle {
			position: relative;
			.dropdown-chevron {
				position: absolute;
				left: -0.1rem;
				top: 1.65rem;
			}
		}
		.ad-user-info-list {
			padding: 0;
			list-style: none;
			&.visible-xs {
				> li {
					float: left;
					width: 100%;
					a {
						float: left;
						width: 100%;
					}
				}
			}
		}
	}
	li.dropdown {
		> a {
			position: relative;
			padding-bottom: 8px;
			&:before {
				content: " ";
				position: absolute;
				right: 1px;
				bottom: 12px;
				border-width: 4px;
				border-style: solid;
			}
			&:hover {
				background: transparent;
			}
		}
		&.without-icon {
			> a:before, > a:after {
				display: none;
			}
		}
		&.logout-dropdown {
			.dropdown-menu {
				left: -100px;
				max-width: 160px;
			}
			li a {
				overflow: hidden;
				max-width: 100%;
				max-height: 40px;
				text-overflow: ellipsis;
			}
		}
		&.open {
			> a {
				color: #fff;
				background: transparent;
			}
		}
		&:hover {
			outline: none;
		}
		a {
			text-transform: inherit;
		}
	}
	li.dropdown:hover > a {
		&:after {
			content: " ";
			position: absolute;
			right: 1px;
			bottom: 0;
			border-width: 4px;
			border-style: solid;
			border-color: transparent transparent $dark-grey transparent;
		}
	}
	li.dropdown {
		a {
			margin-bottom: 0;
		}
		&:hover {
			.dropdown-menu {
				display: block;
			}
		}
		.dropdown-menu {
			border: none;
			border-radius: 0;
			padding: 0;
			left: 0;
			margin-top: -11px;
			right: auto;
			background: $dark-grey;
			max-height: 500px;
			overflow: auto;
			li {
				height: auto;
				a {
					border-radius: 0;
					margin: 0;
					padding: 0.75rem;
					.ad-list-app-header-owner {
						padding-left: 5px;
					}
					&.withIcon {
						padding-left: 42px;
						img {
							position: absolute;
							left: 10px;
							margin-top: 3px;
							max-width: 22px;
						}
					}
				}
			}
		}
	}
	.navbar-collapse {
		padding: 0;
		&.in {
			.navbar-nav {
				width: 100%;
				float: none !important;
				margin: 0 auto;
				li.dropdown:hover .dropdown-menu {
					width: 100%;
				}
				&.nav-app {
					li {
						width: auto;
						display: inline-block;
					}
				}
				.user-img-container {
					padding-left: 56px;
					padding-right: 0;
					width: auto;
					display: inline-block;
					.user-img {
						left: 0;
					}
				}
			}
		}
	}
}

